force-app/main/default/objects/Conference_Insight__c/Conference_Insight__c.object-meta.xml
<CustomObject>
    <label>Conference Insight</label>
    <nameField>
        <label>Conference Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>