force-app/main/default/objects/Conference_Insight__c/fields/Autonomy_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_Satisfaction__c</fullName>
    <description>Autonomy satisfaction rating (e.g., 1-5 scale).</description>
    <label>Autonomy Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>