force-app/main/default/objects/Conference_Insight__c/fields/Competence_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Competence_Satisfaction__c</fullName>
    <description>Competence satisfaction rating (e.g., 1-5 scale).</description>
    <label>Competence Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>