force-app/main/default/objects/Conference_Insight__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference</label>
    <referenceTo>Conference__c</referenceTo>
    <relationshipLabel>Conference Insights</relationshipLabel>
    <relationshipName>Conference_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>