force-app/main/default/objects/Conference_Insight__c/fields/Most_Negative_Sentence_Overall__c.field-meta.xml
<CustomField>
    <fullName>Most_Negative_Sentence_Overall__c</fullName>
    <description>Stores the most negative overall sentence.</description>
    <label>Most Negative Sentence Overall</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>