force-app/main/default/objects/Conference_Insight__c/fields/Most_Positive_Sentence_Overall__c.field-meta.xml
<CustomField>
    <fullName>Most_Positive_Sentence_Overall__c</fullName>
    <description>Most positive overall sentence.</description>
    <label>Most Positive Sentence Overall</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>