force-app/main/default/objects/Conference_Insight__c/fields/Negative_Sentences_Autonomy__c.field-meta.xml
<CustomField>
    <fullName>Negative_Sentences_Autonomy__c</fullName>
    <description>Concatenated negative sentences related to autonomy.</description>
    <label>Negative Sentences Autonomy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>