force-app/main/default/objects/Conference_Insight__c/fields/Negative_Sentences_Competence__c.field-meta.xml
<CustomField>
    <fullName>Negative_Sentences_Competence__c</fullName>
    <description>Concatenated negative sentences related to relatedness.</description>
    <label>Negative Sentences Competence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>