force-app/main/default/objects/Conference_Insight__c/fields/Negative_Sentences_Relatedness__c.field-meta.xml
<CustomField>
    <fullName>Negative_Sentences_Relatedness__c</fullName>
    <label>Negative Sentences Relatedness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>