force-app/main/default/objects/Conference_Insight__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <description>Overall numerical rating (e.g., 1-10 scale).</description>
    <label>Overall Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>