force-app/main/default/objects/Conference_Insight__c/fields/Positive_Sentences_Autonomy__c.field-meta.xml
<CustomField>
    <fullName>Positive_Sentences_Autonomy__c</fullName>
    <label>Positive Sentences Autonomy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>