force-app/main/default/objects/Conference_Insight__c/fields/Positive_Sentences_Competence__c.field-meta.xml
<CustomField>
    <fullName>Positive_Sentences_Competence__c</fullName>
    <description>Stores concatenated positive sentences related to competence.</description>
    <label>Positive Sentences Competence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>