force-app/main/default/objects/Conference_Insight__c/fields/Positive_Sentences_Relatedness__c.field-meta.xml
<CustomField>
    <fullName>Positive_Sentences_Relatedness__c</fullName>
    <description>Stores concatenated positive sentences related to relatedness.</description>
    <label>Positive Sentences Relatedness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>