force-app/main/default/objects/Conference_Insight__c/fields/Relatedness_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Relatedness_Satisfaction__c</fullName>
    <description>Relatedness satisfaction rating (e.g., 1-5 scale).</description>
    <label>Relatedness Satisfaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>