force-app/main/default/objects/Conference_Insight__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <description>Stores the name or identifier of the attendee</description>
    <label>Speaker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>